# sane-web-scanner

./: .gitignore  Cargo.toml  Makefile  build.rs
frontend/: Makefile  nuxt.config.js  package-lock.json  package.json
frontend/components/: Tutorial.vue
frontend/layouts/: blog.vue  default.vue
frontend/pages/: fun.vue  index.vue
frontend/pages/blog/: index.vue
src/: frontend_files.rs  main.rs
src/sane/: mod.rs  sys.rs
