[package]
name = "sane-web-scanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
libloading = "0.7.0"
log = "0.4.14"
flexi_logger = "0.18.0"
actix-web = "4.0.0-beta.8"
systemd-socket-activation = { git = "https://github.com/aQaTL/systemd-socket-activation", rev = "a80c15060a07830483f1290f7ef4b8543f97d43b" }
futures = "0.3.15"
tokio = { version = "1.8.2", features = ["sync", "rt"] }
bitflags = "1.2.1"

sane-scan = { git = "https://github.com/aQaTL/sane-scan", branch = "main" }